Feature #12713
Take into account the merge between ApplicationService and
ContributionManager, and the deletion of ContributionManager.